--- a/web/src/styles/Auth.css
+++ b/web/src/styles/Auth.css
@@ -1,90 +1,95 @@
 #Auth {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #313345;
 }
 
 form {
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    width: 25%;
-    padding: 2% 2% 2% 2%;
-    border-radius: 25px;
-    box-shadow: 0px 16px 24px 2px rgba(0,0,0,0.14) , 0px 6px 30px 5px rgba(0,0,0,0.12) , 0px 8px 10px -7px rgba(0,0,0,0.2) 
+  background: #1d1d2a;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  padding: 2% 2% 2% 2%;
+  border-radius: 25px;
+  box-shadow: 0px 16px 24px 2px rgba(0, 0, 0, 0.14),
+    0px 6px 30px 5px rgba(0, 0, 0, 0.12), 0px 8px 10px -7px rgba(0, 0, 0, 0.2);
+  color: white;
 }
 
-form>* {
-    margin: 5% 0 5% 0;
+form > * {
+  margin: 5% 0 5% 0;
 }
 
 .input-group {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 label {
-    color: purple;
+  color: #65cebb;
 }
 
-input {
-    border: none;
-    border-bottom: 2px solid lightgray;
-    font-size: 18px;
-    padding: 1%;
+form input {
+  border: none;
+  border-bottom: 2px solid lightgray;
+  font-size: 18px;
+  padding: 1%;
+  background: transparent;
+  color: white;
 }
 
-input:focus {
-    outline: none;
-    border-bottom: 2px solid purple;
-    caret-color: purple;
+form input:focus {
+  outline: none;
+  border-bottom: 2px solid #65cebb;
+  caret-color: #65cebb;
 }
 
-input::placeholder {
-    color: gray;
-    opacity: 1
+form input::placeholder {
+  color: gray;
+  opacity: 1;
 }
 
 .submit {
-    width: 75%;
-    border: none;
-    background: linear-gradient(to right, #b934f7, #822198);
-    color: white;
-    border-radius: 5px;
-    align-self: center;
-    padding: 4% 1% 4% 1%; 
+  width: 75%;
+  border: none;
+  background: linear-gradient(to right, #65cebb, #a0d5fa);
+  color: white;
+  border-radius: 5px;
+  align-self: center;
+  padding: 4% 1% 4% 1%;
 }
 
 .switchtag {
-    font-size: 12px;
-    align-self: center;
+  font-size: 12px;
+  align-self: center;
 }
 
-.switchtag>button {
-    background: transparent;
-    color: purple;
-    border: none;
-    cursor: pointer;
+.switchtag > button {
+  background: transparent;
+  color: #65cebb;
+  border: none;
+  cursor: pointer;
 }
 
-p {
-    margin: 0;
-    padding: 0 1% 0 1%;
+form p {
+  margin: 0;
+  padding: 0 1% 0 1%;
 }
 
 .header-1 {
-    font-size: 32px;
-    font-weight: 800;
+  font-size: 32px;
+  font-weight: 800;
 }
 
 .header-2 {
-    font-size: 16px;
-    font-weight: 100;
+  font-size: 16px;
+  font-weight: 100;
 }
 
 .error-text {
-    color: crimson;
-    font-size: 12px;
+  color: crimson;
+  font-size: 12px;
 }
