--- a/web/src/styles/Main.css
+++ b/web/src/styles/Main.css
@@ -38,11 +38,24 @@
 #Channel-selector {
   background: #242734;
   grid-column: 1/2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .channel-button {
-    background: red;
-    color: white
+    color: white;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #353648;
+    border-radius: 3px;
+    width: 85%;
+    padding: 3% 0 3% 4%;
+    text-align: left;
+}
+
+.channel-button:hover {
+  background: #353648;
 }
 
 #Channel {
